# VulkanTechShowcase

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  vcpkg.json
BuildScripts/: CopyDataToOutput.bat  GenerateShaders.bat
Data/Engine/Shaders/CascadeVisualizer/: frag.spv  vert.spv
Data/Engine/Shaders/DebugShadowMapping/: frag.spv  vert.spv
Data/Engine/Shaders/Lit/: frag.spv  vert.spv
Data/Engine/Shaders/PBR/: frag.spv  vert.spv
Data/Engine/Shaders/ShadowMapping/: geom.spv  vert.spv
Editor/: EditorUI.cpp  EditorUI.h
Editor/Windows/: MainWindow.cpp  MainWindow.h  SkeletonViewerWindow.cpp  SkeletonViewerWindow.h  Window.h
Editor/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl3.cpp  imgui_impl_vulkan.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
ShadersGLSL/CascadeVisualizer/: shader.frag  shader.vert
ShadersGLSL/DebugShadowMapping/: shader.frag  shader.vert
ShadersGLSL/Lit/: shader.frag  shader.vert
ShadersGLSL/PBR/: shader.frag  shader.vert
ShadersGLSL/ShadowMapping/: shader.geom  shader.vert
Source/: VulkanTechShowcase.cpp
Source/Engine/: Engine.cpp  Engine.h  EngineName.h  SDLInterface.cpp  SDLInterface.h  TaskManager.cpp  TaskManager.h
Source/Engine/AssetManager/: Asset.h  AssetManager.cpp  AssetManager.h  AssetPath.h  LazyAsset.cpp  LazyAsset.h  LazyAssetPtr.cpp  LazyAssetPtr.h  Object.cpp  Object.h  UniqueID.cpp  UniqueID.h
Source/Engine/AssetManager/Animation/: AnimationData.h  AnimationUtilities.cpp  AnimationUtilities.h  Animator.cpp  Animator.h  BoneData.h  Skeleton.cpp  Skeleton.h
Source/Engine/AssetManager/Model/: MeshData.h  Model.cpp  Model.h
Source/Engine/AssetManager/Texture/: Texture.cpp  Texture.h  TextureData.h
Source/Engine/Camera/: Camera.cpp  Camera.h  CameraMatrices.h  View.h
Source/Engine/ECS/: Entity.h  EntityManager.cpp  EntityManager.h
Source/Engine/ECS/Components/: Component.h  Components.h  MaterialComponent.h  TransformComponent.h
Source/Engine/ECS/Systems/: AnimationSystem.cpp  AnimationSystem.h  CameraSystem.cpp  CameraSystem.h  LightSystem.cpp  LightSystem.h  MaterialSystem.cpp  MaterialSystem.h  MeshSystem.cpp  MeshSystem.h  SystemBase.cpp  SystemBase.h  TransformSystem.cpp  TransformSystem.h
Source/Engine/Input/: InputSystem.cpp  InputSystem.h
Source/Engine/Rendering/: AbstractData.h  RenderingInterface.cpp  RenderingInterface.h  SharedUniforms.h
Source/Engine/Rendering/Descriptors/: DescriptorInfo.h  DescriptorRegistry.cpp  DescriptorRegistry.h  Semantics.h
Source/Engine/Rendering/Light/: Light.h  LightUtilities.h  Shadow.h  ShadowData.h
Source/Engine/Rendering/Material/: Material.h  MaterialSemantics.h
Source/Engine/Rendering/Vulkan/: Frame.cpp  Frame.h  PushConstant.h  RenderPipeline.cpp  RenderPipeline.h  RenderUtilities.cpp  RenderUtilities.h  VkContext.h  VulkanRenderData.h  VulkanRendering.cpp  VulkanRendering.h
Source/Engine/Rendering/Vulkan/Pipelines/: LitPipeline.cpp  LitPipeline.h  PBRPipeline.cpp  PBRPipeline.h  PipelineNames.h  ShadowMapDebugPipeline.cpp  ShadowMapDebugPipeline.h  ShadowMapPipeline.cpp  ShadowMapPipeline.h  SpritePipeline.cpp  SpritePipeline.h
Source/Engine/Utilities/: AlignedVectors.h  Color.cpp  Color.h  Delegate.h  FileHelper.cpp  FileHelper.h  ImageImporter.cpp  ImageImporter.h  MeshImporter.cpp  MeshImporter.h
Source/Engine/World/: View.h  World.cpp  World.h
